# internal/types/shortener.go
@@ -1,0 +1,12 @@
+package types
+
+type Url struct {
+	ID          int64  `json:"id"`
+	ShortCode   string `json:"short_code"`
+	ShortURL    string `json:"short_url"`
+	OriginalURL string `json:"original_url"`
+	Describe    string `json:"describe"`
+	Status      int32  `json:"status"`
+	CreatedAt   int64  `json:"created_at"`
+	UpdatedAt   int64  `json:"updated_at"`
+}
