# openapi.yml
@@ -12,40 +12,11 @@ info:
   version: 0.1.0
 servers:
   - url: http://127.0.0.1:8080/api/v1
+    description: Version 1
 tags:
   - name: shorten
     description: 短址
 paths:
-  /{code}:
-    get:
-      tags:
-        - shorten
-      summary: '跳转到长网址'
-      description: '通过短码跳转到长网址'
-      operationId: 'redirectShorten'
-      parameters:
-        - name: code
-          in: path
-          description: '短码'
-          required: true
-          schema:
-            type: string
-            maxLength: 8
-            pattern: '^[a-zA-Z0-9]+$'
-            example: 'aBc123'
-      responses:
-        '307':
-          description: '跳转成功'
-        '400':
-          description: '参数错误'
-        '404':
-          description: '短码不存在'
-        default:
-          description: '未知错误'
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
   /shorten:
     post:
       tags:
@@ -69,7 +40,7 @@ paths:
         '400':
           description: '参数错误'
         '422':
-          description: '创建失败'
+          description: '操作失败'
         default:
           description: '未知错误'
           content:
@@ -161,7 +132,7 @@ paths:
         '404':
           description: '短码不存在'
         '422':
-          description: '更新失败'
+          description: '操作失败'
         default:
           description: '未知错误'
           content:
@@ -189,10 +160,8 @@ paths:
           description: '操作成功'
         '400':
           description: '参数错误'
-        '404':
-          description: '短码不存在'
         '422':
-          description: '更新失败'
+          description: '操作失败'
         default:
           description: '未知错误'
           content:
@@ -205,7 +174,7 @@ components:
     Shorten:
       type: object
       properties:
-        originalUrl:
+        original_url:
           type: string
           format: uri
           description: '原始长网址'
@@ -217,11 +186,11 @@ components:
           type: string
           description: '长网址描述'
       required:
-        - originalUrl
+        - original_url
     ShortenUpdate:
       type: object
       properties:
-        originalUrl:
+        original_url:
           type: string
           format: uri
           description: '原始长网址'      
@@ -229,7 +198,7 @@ components:
           type: string
           description: '长网址描述'
       required:
-        - originalUrl   
+        - original_url   
     ShortenResponse:
       type: object
       properties:
@@ -237,11 +206,11 @@ components:
           type: string
           description: '短码'
           pattern: '^[a-zA-Z0-9]+$'        
-        shortUrl:
+        short_url:
           type: string
           format: uri
           description: '短网址'
-        originalUrl:
+        original_url:
           type: string
           format: uri
           description: '原始长网址'
